<resources>
    <string name="app_name">FoodPlanner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="connect_with_google">Connect with google</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already have account?</string>
    <string name="welcome_to_tamang">Welcome To Food Planner</string>
    <string name="enter_info_login">Enter your Email address for sign in. Enjoy your food :)</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_acc">Create new account</string>
    <string name="dont_have">Do not have account?</string>
    <string name="forget_password_check">Forget Password</string>
    <string name="enter_info_forget">Enter your Email address to Send Email to Verification.</string>
    <string name="reset_pass_btn">Reset Password</string>
    <string name="GET_STARTED">Get Started</string>
    <string name="SaturDay">SaturDay</string>
    <string name="SunDay">SunDay</string>
    <string name="MonDay">MonDay</string>
    <string name="TuesDay">TuesDay</string>
    <string name="WednesDay">WednesDay</string>
    <string name="ThursDay">ThursDay</string>
    <string name="FriDay">FriDay</string>
    <string name="Add_Plan">Add Plan</string>
    <string name="Search_by">Search by</string>
    <string name="Area">Area</string>
    <string name="Category">Category</string>
    <string name="Ingredient">Ingredient</string>
    <string name="Name">Name</string>
    <string name="Id">Id</string>
    <string name="First_Letter">First Letter</string>
    <string name="My_Favourites">My Favourites</string>
    <string name="Categories">Categories</string>
</resources>