<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".view.fragments.LoginFragment">
   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.01"
            android:text="@string/welcome_to_tamang"
            android:textColor="#010F07"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="3sp"
            android:text="@string/enter_info_login"
            android:textColor="#868686"
            android:textSize="16sp" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/edt_email_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:background="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="5dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="248dp">

            <EditText
                android:id="@+id/edt_password_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="5dp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="3sp"
            android:text="@string/forget_password"
            android:textColor="#9e9e9e"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="3sp"
            android:layout_margin="5dp"
            android:text="@string/dont_have"
            android:textColor="#9e9e9e"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_create_new_Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:letterSpacing="-0.03"
            android:layout_margin="5dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/create_new_acc"
            android:textColor="@color/purple_500"
            android:textSize="16sp" />
</LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:letterSpacing="-0.03"
            android:lineSpacingExtra="3sp"
            android:text="@string/or"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_Login_googleAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#4285F4"
            android:drawableStart="@drawable/common_google_signin_btn_icon_dark_normal"
            android:text="@string/connect_with_google"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>